[gd_scene load_steps=13 format=3 uid="uid://cr0o026nocye6"]

[ext_resource type="Script" path="res://src/game/SpecialInteractions/keypad_overlay.gd" id="1_nkhys"]
[ext_resource type="Texture2D" uid="uid://b4fcxvusqkasc" path="res://assets/gfx/environment/safety box.png" id="2_1vvhu"]
[ext_resource type="Script" path="res://src/common/tweenable_control.gd" id="2_wm0mr"]
[ext_resource type="AudioStream" uid="uid://dnl08h1ilt3ti" path="res://placeholders/sfx/safe_button_press.mp3" id="4_qxs8c"]
[ext_resource type="AudioStream" uid="uid://uy1ctmud7u7f" path="res://placeholders/sfx/placeholder_open_safe.mp3" id="5_vhtja"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5q2yf"]
atlas = ExtResource("2_1vvhu")
region = Rect2(39.3684, 0, 33.9922, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3y63"]
bg_color = Color(0.190762, 0.190762, 0.190762, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2jj1"]
bg_color = Color(0.374139, 0.374139, 0.374139, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5dvi"]
bg_color = Color(0.118581, 0.118581, 0.118581, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vbwdt"]
font_size = 35
font_color = Color(0, 0, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_foge5"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_qxs8c")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ennyi"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_vhtja")

[node name="KeypadOverlay" type="CanvasLayer"]
script = ExtResource("1_nkhys")

[node name="Background" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.384314, 0.384314, 0.384314, 1)
script = ExtResource("2_wm0mr")

[node name="Safe" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -168.0
offset_top = -327.0
offset_right = 1364.0
offset_bottom = 856.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(766, 591.5)
texture = SubResource("AtlasTexture_5q2yf")
stretch_mode = 5
script = ExtResource("2_wm0mr")

[node name="HFlowContainer" type="HFlowContainer" parent="Safe"]
layout_mode = 0
offset_left = 816.0
offset_top = 513.0
offset_right = 1171.0
offset_bottom = 925.0

[node name="1" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "1"

[node name="2" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "2"

[node name="3" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "3"

[node name="4" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "4"

[node name="5" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "5"

[node name="6" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "6"

[node name="7" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "7"

[node name="8" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "8"

[node name="9" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "9"

[node name="Clear" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 60.585)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "Clear"

[node name="0" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "0"

[node name="Enter" type="Button" parent="Safe/HFlowContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 60.585)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_t3y63")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t2jj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5dvi")
text = "Enter"

[node name="Close" type="Button" parent="Safe"]
layout_mode = 0
offset_left = 338.0
offset_top = 259.0
offset_right = 597.0
offset_bottom = 354.0
theme_override_font_sizes/font_size = 51
text = "Close"

[node name="ReadoutScreenBackground" type="ColorRect" parent="Safe"]
layout_mode = 0
offset_left = 832.0
offset_top = 419.0
offset_right = 1119.0
offset_bottom = 469.0
color = Color(0.293295, 0.42365, 0.293627, 0.909804)

[node name="ReadoutScreenText" type="Label" parent="Safe/ReadoutScreenBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 188.0
grow_horizontal = 2
grow_vertical = 2
text = "1234"
label_settings = SubResource("LabelSettings_vbwdt")

[node name="Label" type="Label" parent="Safe/ReadoutScreenBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -13.0
grow_horizontal = 2
grow_vertical = 2
text = "Password:"
label_settings = SubResource("LabelSettings_vbwdt")

[node name="ButtonPressSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_foge5")
max_polyphony = 3

[node name="OpenSafeSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ennyi")

[connection signal="pressed" from="Safe/HFlowContainer/1" to="." method="_on_number_pressed" binds= [1]]
[connection signal="pressed" from="Safe/HFlowContainer/2" to="." method="_on_number_pressed" binds= [2]]
[connection signal="pressed" from="Safe/HFlowContainer/3" to="." method="_on_number_pressed" binds= [3]]
[connection signal="pressed" from="Safe/HFlowContainer/4" to="." method="_on_number_pressed" binds= [4]]
[connection signal="pressed" from="Safe/HFlowContainer/5" to="." method="_on_number_pressed" binds= [5]]
[connection signal="pressed" from="Safe/HFlowContainer/6" to="." method="_on_number_pressed" binds= [6]]
[connection signal="pressed" from="Safe/HFlowContainer/7" to="." method="_on_number_pressed" binds= [7]]
[connection signal="pressed" from="Safe/HFlowContainer/8" to="." method="_on_number_pressed" binds= [8]]
[connection signal="pressed" from="Safe/HFlowContainer/9" to="." method="_on_number_pressed" binds= [9]]
[connection signal="pressed" from="Safe/HFlowContainer/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Safe/HFlowContainer/0" to="." method="_on_number_pressed" binds= [0]]
[connection signal="pressed" from="Safe/HFlowContainer/Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="Safe/Close" to="." method="close_overlay"]
